# atcorder

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.cargo/: config.toml
abc001_a/: Cargo.toml
abc001_b/: Cargo.toml
contests/abc/a/001/: Cargo.toml
contests/abc/b/001/: Cargo.toml
docs/: rust-cheatsheet.md
lib/: Cargo.toml
lib/src/: lib.rs
reference/: rust-basics.md
rust/: Cargo.toml
rust/src/: abc001_a.rs
scripts/: new.sh
